refactor: 현장톡에 쓰이는 Model 패키지 분리

--- a/android/app/src/main/res/layout/item_livetalk_other_bubble.xml
+++ b/android/app/src/main/res/layout/item_livetalk_other_bubble.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="livetalkChatItem"
-            type="com.yagubogu.presentation.livetalk.chat.LivetalkChatItem" />
+            type="com.yagubogu.presentation.livetalk.chat.model.LivetalkChatItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
