--- a/android/app/src/main/res/layout/item_livetalk_my_bubble.xml
+++ b/android/app/src/main/res/layout/item_livetalk_my_bubble.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="livetalkChatItem"
-            type="com.yagubogu.presentation.livetalk.chat.LivetalkChatItem" />
+            type="com.yagubogu.presentation.livetalk.chat.model.LivetalkChatItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
