refactor: 통계 Compose 마이그레이션 후 presentation -> ui 패키지로 이전

--- a/android/app/src/main/res/layout/fragment_stats.xml
+++ b/android/app/src/main/res/layout/fragment_stats.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.stats.StatsFragment">
+        tools:context=".ui.stats.StatsFragment">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_stats"
