--- a/android/app/src/main/res/layout/fragment_stats_my.xml
+++ b/android/app/src/main/res/layout/fragment_stats_my.xml
@@ -7,11 +7,11 @@
 
         <variable
             name="statsMyUiModel"
-            type="com.yagubogu.presentation.stats.my.StatsMyUiModel" />
+            type="com.yagubogu.ui.stats.my.model.StatsMyUiModel" />
 
         <variable
             name="averageStats"
-            type="com.yagubogu.presentation.stats.my.AverageStats" />
+            type="com.yagubogu.ui.stats.my.model.AverageStats" />
     </data>
 
     <ScrollView
