refactor: 직관 내역 아이템 클릭 이벤트 처리

--- a/android/app/src/main/res/layout/item_attendance_history_detail.xml
+++ b/android/app/src/main/res/layout/item_attendance_history_detail.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="attendanceHistoryItem"
-            type="com.yagubogu.presentation.attendance.model.AttendanceHistoryItem.Detail" />
+            type="com.yagubogu.presentation.attendance.model.AttendanceHistoryUiModel.Detail" />
 
         <variable
             name="handler"
