--- a/android/app/src/main/res/layout/item_attendance_history_summary.xml
+++ b/android/app/src/main/res/layout/item_attendance_history_summary.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="attendanceHistoryItem"
-            type="com.yagubogu.presentation.attendance.model.AttendanceHistoryItem.Summary" />
+            type="com.yagubogu.presentation.attendance.model.AttendanceHistoryUiModel.Summary" />
 
         <variable
             name="handler"
