--- a/android/app/src/main/res/layout/fragment_attendance_history.xml
+++ b/android/app/src/main/res/layout/fragment_attendance_history.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.yagubogu.presentation.attendance.AttendanceHistoryViewModel" />
+            type="com.yagubogu.ui.attendance.AttendanceHistoryViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +16,7 @@
         android:paddingHorizontal="20dp"
         android:paddingTop="8dp"
         android:paddingBottom="12dp"
-        tools:context=".presentation.attendance.AttendanceHistoryFragment">
+        tools:context=".ui.attendance.AttendanceHistoryFragment">
 
         <Spinner
             android:id="@+id/spinner_attendance_history_filter"
