refactor: 현장톡 메시지 입력, 응원 비즈니스 로직 StateFlow 전환 및 컴포저블 연동

--- a/android/app/src/main/res/layout/activity_livetalk_chat.xml
+++ b/android/app/src/main/res/layout/activity_livetalk_chat.xml
@@ -145,7 +145,7 @@
                 android:layout_height="wrap_content"
                 android:elevation="6dp"
                 android:gravity="center"
-                android:text="@{@string/livetalk_like_count_message(viewModel.livetalkTeams.myTeam.shortname, viewModel.likeCountStateHolder.myTeamLikeShowingCount)}"
+                android:text="@{@string/livetalk_like_count_message(viewModel.livetalkTeams.myTeam.shortname, viewModel.likeCountStateHolder.myTeamLikeShowingCountLiveData)}"
                 android:visibility="@{viewModel.livetalkTeams.myTeamType != null ? View.VISIBLE : View.GONE}"
 
                 app:layout_constraintBottom_toTopOf="@+id/constraint_input_message"
