refactor: 로그인, 응원팀 선택 파일 패키지 위치 이동 (`presentation` -> `ui`)

--- a/android/app/src/main/res/layout/fragment_favorite_team_confirm.xml
+++ b/android/app/src/main/res/layout/fragment_favorite_team_confirm.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="favoriteTeamItem"
-            type="com.yagubogu.presentation.favorite.FavoriteTeamItem" />
+            type="com.yagubogu.ui.favorite.FavoriteTeamItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
