--- a/android/app/src/main/res/layout/item_favorite_team.xml
+++ b/android/app/src/main/res/layout/item_favorite_team.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="favoriteTeamItem"
-            type="com.yagubogu.presentation.favorite.FavoriteTeamItem" />
+            type="com.yagubogu.ui.favorite.FavoriteTeamItem" />
 
         <variable
             name="handler"
